[gd_scene load_steps=3 format=3 uid="uid://cuhuiq34bfan7"]

[ext_resource type="Script" path="res://misc/Global.gd" id="1_387qh"]
[ext_resource type="PackedScene" uid="uid://wkjs6v6a35d" path="res://level_elements/ui/keypad/key_pad.tscn" id="2_2xxiq"]

[node name="Global" type="Node2D"]
process_priority = -99
script = ExtResource("1_387qh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="KeyPad" parent="CanvasLayer" instance=ExtResource("2_2xxiq")]
unique_name_in_owner = true
visible = false

[node name="Update" type="CanvasLayer" parent="."]
layer = 127

[node name="UpdateDialog" type="AcceptDialog" parent="Update"]
title = "New version available!"
size = Vector2i(237, 100)

[node name="Priority" type="CanvasLayer" parent="."]
layer = 128

[node name="SafeError" type="AcceptDialog" parent="Priority"]
unique_name_in_owner = true
popup_window = true
ok_button_text = "OK üëç"
dialog_autowrap = true

[node name="FatalError" type="AcceptDialog" parent="Priority"]
unique_name_in_owner = true
popup_window = true
ok_button_text = "Close Editor"
dialog_autowrap = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
